--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -40,7 +40,6 @@
 
                 <TextView
                     style="@style/TextBase"
-                    android:layout_marginTop="30dp"
                     android:gravity="center_horizontal"
                     android:padding="10dp"
                     android:text="@string/intro_member_info"
@@ -84,6 +83,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
                         android:gravity="center_horizontal"
                         android:orientation="vertical">
 
