--- a/app/src/main/res/layout/view_header_menu.xml
+++ b/app/src/main/res/layout/view_header_menu.xml
@@ -21,7 +21,7 @@
             android:layout_height="100dp"
             android:maxWidth="100dp"
             android:adjustViewBounds="true"
-            android:src="@mipmap/ic_drawer_user" />
+            android:src="@mipmap/ic_avatar_2" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -49,30 +49,22 @@
                     android:gravity="center_horizontal"
                     android:textSize="@dimen/text_large" />
 
-                <TextView
-                    android:id="@+id/btn_logout"
-                    style="@style/TextBase.White"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:adjustViewBounds="true"
-                    android:background="@drawable/background_pressed_common"
-                    android:padding="5dp"
-                    android:layout_marginTop="25dp"
-                    android:layout_gravity="right"
-                    android:text="@string/logout"
-                    android:drawableTint="@color/white"
-                    android:gravity="center_vertical"
-                    android:drawableRight="@mipmap/ic_logout"
-                    android:visibility="gone"/>
 
                 <TextView
                     android:id="@+id/btn_go_to_profile"
+                    style="@style/ButtonMes.Green"
+                    android:padding="10dp"
+                    android:text="@string/go_to_profile"
+                    android:layout_marginTop="15dp" />
+
+                <TextView
+                    android:id="@+id/btn_logout"
                     style="@style/TextBase.White"
                     android:background="@drawable/background_pressed_common"
                     android:padding="5dp"
-                    android:layout_marginTop="25dp"
+                    android:layout_marginTop="10dp"
                     android:layout_gravity="right"
-                    android:text="@string/go_to_profile"/>
+                    android:text="@string/logout"/>
             </LinearLayout>
 
             <LinearLayout
