--- a/app/src/main/res/layout/activity_block.xml
+++ b/app/src/main/res/layout/activity_block.xml
@@ -4,25 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="net.mercadosocial.moneda.ui.BlockActivity"
     android:background="@drawable/green_gradient"
     android:gravity="center"
-    android:padding="10dp">
+    android:orientation="vertical"
+    android:padding="10dp"
+    tools:context="net.mercadosocial.moneda.ui.BlockActivity">
 
+    <View style="@style/XpansorVert" />
     <android.support.v7.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        app:srcCompat="@mipmap/ic_logo_etics"/>
+        app:srcCompat="@mipmap/ic_mes_v2_144" />
 
     <TextView
         android:id="@+id/tv_block_text"
         style="@style/TextBase"
-        android:textSize="20sp"
-        android:text="@string/block_text"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:layout_marginTop="20dp"/>
+        android:text="@string/block_text"
+        android:textSize="20sp" />
 
+    <View style="@style/XpansorVert" />
+
+    <TextView
+        style="@style/TextBase.Purple"
+        android:gravity="center_horizontal"
+        android:text="@string/enter_test_code" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/edit_test_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/test_code" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_enter_test_code"
+            style="@style/TextBase.White"
+            android:layout_marginLeft="15dp"
+            android:text="@string/enter"
+            app:backgroundTint="@color/purple" />
+
+    </LinearLayout>
 
 </LinearLayout>
