--- a/app/src/main/res/layout/fragment_entities.xml
+++ b/app/src/main/res/layout/fragment_entities.xml
@@ -8,7 +8,8 @@
         android:id="@+id/progress_entities"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
     <FrameLayout
         android:id="@+id/frame_entities"
