--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -69,6 +69,7 @@
             <TextView
                 style="@style/TextBase"
                 android:layout_marginTop="5dp"
+                android:textSize="@dimen/text_small"
                 android:text="@string/invitations_intro"
                 android:layout_gravity="left"/>
 
