--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,27 +66,27 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
 
             <TextView
                 android:id="@+id/btn_remember_password"
                 style="@style/TextBase"
                 android:background="@drawable/background_pressed_common"
                 android:gravity="center_horizontal"
-                android:padding="8dp"
                 android:text="@string/remember_password" />
 
             <View
                 style="@style/XpansorHoriz"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp" />
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp" />
 
             <TextView
                 android:id="@+id/btn_register"
                 style="@style/TextBase"
                 android:background="@drawable/background_pressed_common"
                 android:gravity="center_horizontal"
-                android:padding="8dp"
                 android:text="@string/not_account_yet_register" />
         </LinearLayout>
     </LinearLayout>
