--- a/app/src/main/res/layout/fragment_entities_map.xml
+++ b/app/src/main/res/layout/fragment_entities_map.xml
@@ -5,9 +5,8 @@
     tools:context="net.mercadosocial.moneda.ui.entities.map.EntitiesMapFragment">
 
 
-    <org.osmdroid.views.MapView
-        android:id="@+id/mapview"
-        tilesource="Mapnik"
+    <FrameLayout
+        android:id="@+id/frame_maps"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
