--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,6 +35,7 @@
     <color name="red">#F00</color>
     <color name="red_dark">#d10000</color>
     <color name="red_orange">#F7722F</color>
+    <color name="yellow">#F7E32F</color>
     <color name="black_semitransp_pressed">#34000000</color>
     <color name="black_semitransp">#60000000</color>
 
