--- a/app/src/main/res/layout/activity_entity_info.xml
+++ b/app/src/main/res/layout/activity_entity_info.xml
@@ -27,17 +27,19 @@
                 <FrameLayout
                     android:id="@+id/frame_gallery_pager"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp" />
+                    android:layout_height="250dp"
+                    android:background="@color/white"/>
 
                 <ImageView
                     android:id="@+id/img_entity"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:adjustViewBounds="true"
+                    android:maxHeight="250dp"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/img_entitiy_example"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -51,10 +53,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:background="@drawable/background_pressed_common"
                         android:padding="5dp"
-                        android:tint="@color/grey_disabled"
                         android:src="@mipmap/ic_heart_empty"
-                        android:background="@drawable/background_pressed_common"/>
+                        android:tint="@color/grey_disabled" />
 
                     <View style="@style/SeparatorVertical.Grey" />
 
@@ -108,8 +110,8 @@
                 <android.support.v7.widget.AppCompatButton
                     android:id="@+id/btn_new_payment"
                     style="@style/ButtonMes.Green"
-                    android:layout_margin="15dp"
                     android:layout_gravity="center_horizontal"
+                    android:layout_margin="15dp"
                     android:text="@string/send_payment_next" />
 
                 <View style="@style/SeparatorHorizontal.Grey" />
@@ -123,34 +125,34 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:layout_marginBottom="30dp"
                     android:gravity="center_horizontal"
-                    android:layout_marginBottom="30dp">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/btn_rrss_web"
-                        android:src="@mipmap/ic_rrss_web"
-                        style="@style/BtnRRSS" />
+                        style="@style/BtnRRSS"
+                        android:src="@mipmap/ic_rrss_web" />
 
                     <ImageView
                         android:id="@+id/btn_rrss_telegram"
-                        android:src="@mipmap/ic_rrss_telegram"
-                        style="@style/BtnRRSS" />
+                        style="@style/BtnRRSS"
+                        android:src="@mipmap/ic_rrss_telegram" />
 
                     <ImageView
                         android:id="@+id/btn_rrss_twitter"
-                        android:src="@mipmap/ic_rrss_twitter"
-                        style="@style/BtnRRSS" />
+                        style="@style/BtnRRSS"
+                        android:src="@mipmap/ic_rrss_twitter" />
 
                     <ImageView
                         android:id="@+id/btn_rrss_facebook"
-                        android:src="@mipmap/ic_rrss_facebook"
-                        style="@style/BtnRRSS" />
+                        style="@style/BtnRRSS"
+                        android:src="@mipmap/ic_rrss_facebook" />
 
                     <ImageView
                         android:id="@+id/btn_rrss_instagram"
-                        android:src="@mipmap/ic_rrss_instagram"
-                        style="@style/BtnRRSS" />
+                        style="@style/BtnRRSS"
+                        android:src="@mipmap/ic_rrss_instagram" />
 
 
                 </LinearLayout>
@@ -178,12 +180,12 @@
                     <TextView
                         android:id="@+id/tv_no_offers"
                         style="@style/TextBase"
-                        android:text="@string/no_offers_right_now"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
                         android:gravity="center_horizontal"
-                        android:visibility="gone"/>
+                        android:text="@string/no_offers_right_now"
+                        android:visibility="gone" />
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recycler_offers"
@@ -194,7 +196,7 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="7dp"
-                        android:background="@drawable/shadow_header"/>
+                        android:background="@drawable/shadow_header" />
 
                 </RelativeLayout>
 
@@ -206,10 +208,10 @@
             style="@style/TextBase.White"
             android:layout_width="match_parent"
             android:background="@color/transblack_entities"
+            android:fontFamily="@font/comfortaa_bold"
             android:gravity="center"
             android:padding="10dp"
-            android:textSize="22sp"
-            android:fontFamily="@font/comfortaa_bold"/>
+            android:textSize="22sp" />
 
     </RelativeLayout>
 </LinearLayout>
