--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -24,10 +24,11 @@
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/img_profile"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:adjustViewBounds="true"
-                app:srcCompat="@mipmap/ic_avatar_2"/>
+                app:srcCompat="@mipmap/ic_avatar_2"
+                android:layout_marginBottom="20dp"/>
 
 
             <TextView
@@ -36,7 +37,7 @@
                 android:text="@string/user_data"
                 android:layout_gravity="left"
                 android:textStyle="bold"
-                android:layout_marginTop="20dp"/>
+                android:visibility="gone"/>
 
             <EditText
                 android:id="@+id/edit_name_person"
