- many changes and fixes - almost ready for final release

--- a/app/src/main/res/layout/activity_register_web.xml
+++ b/app/src/main/res/layout/activity_register_web.xml
@@ -4,75 +4,145 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/green_gradient"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context="net.mercadosocial.moneda.ui.auth.register_web.RegisterWebActivity">
 
     <include layout="@layout/toolbar" />
 
     <TextView
         style="@style/TextBase"
-        android:text="@string/select_profile"
-        android:layout_margin="10dp"/>
+        android:layout_margin="10dp"
+        android:text="@string/select_profile" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/btn_register_person"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:background="@drawable/bg_frame_black_corners"
-            android:orientation="vertical"
-            android:padding="10dp"
-            android:layout_margin="10dp">
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="30dp"
+            <LinearLayout
+                android:id="@+id/btn_register_person"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@mipmap/ic_persons"
-                android:tint="@color/purple" />
+                android:layout_margin="10dp"
+                android:background="@drawable/bg_frame_black_corners"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@mipmap/ic_persons"
+                    android:tint="@color/purple" />
+
+                <TextView
+                    style="@style/TextBase"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/customer"
+                    android:textColor="@color/purple"
+                    android:textSize="@dimen/text_large" />
+
+                <TextView
+                    style="@style/TextBase"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/invitation_code_text_short"
+                    android:textSize="@dimen/text_small_2"
+                    android:visibility="gone" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/btn_register_entity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/bg_frame_black_corners"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@mipmap/ic_entities"
+                    android:tint="@color/purple" />
+
+                <TextView
+                    style="@style/TextBase"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/entity"
+                    android:textColor="@color/purple"
+                    android:textSize="@dimen/text_large" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_frame_black_corners"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@mipmap/ic_invitation"
+                    android:tint="@color/purple" />
+
+                <TextView
+                    style="@style/TextBase"
+                    android:layout_marginTop="15dp"
+                    android:gravity="center_horizontal"
+                    android:padding="10dp"
+                    android:text="@string/invitation_code_text"
+                    android:textSize="@dimen/text_small_2"
+                    android:visibility="visible" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/edit_invitation_code"
+                        style="@style/TextBase"
+                        android:layout_weight="1"
+                        android:hint="@string/invitation_code"
+                        android:inputType="textShortMessage"
+                        android:padding="10dp" />
+
+                    <android.support.v7.widget.AppCompatButton
+                        android:id="@+id/btn_register_person_guest"
+                        style="@style/ButtonMes"
+                        android:minWidth="0dp"
+                        android:text="@string/continue_str" />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <TextView
                 style="@style/TextBase"
-                android:text="@string/person_customer"
-                android:textColor="@color/purple"
-                android:textSize="@dimen/text_large"
-                android:layout_marginTop="5dp"/>
-
+                android:layout_marginTop="5dp"
+                android:gravity="center_horizontal"
+                android:padding="10dp"
+                android:text="@string/invitation_code_text"
+                android:textSize="@dimen/text_small_2"
+                android:visibility="gone" />
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/btn_register_entity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:background="@drawable/bg_frame_black_corners"
-            android:orientation="vertical"
-            android:padding="10dp"
-            android:layout_margin="10dp">
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@mipmap/ic_entities"
-                android:tint="@color/purple" />
-
-            <TextView
-                style="@style/TextBase"
-                android:text="@string/entity"
-                android:textColor="@color/purple"
-                android:textSize="@dimen/text_large"
-                android:layout_marginTop="5dp" />
-
-        </LinearLayout>
-
-    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
