--- a/app/src/main/res/layout/fragment_entities.xml
+++ b/app/src/main/res/layout/fragment_entities.xml
@@ -5,7 +5,7 @@
     tools:context="net.mercadosocial.moneda.ui.entities.EntitiesFragment">
 
     <ProgressBar
-        android:id="@+id/progress_entities"
+        android:id="@+id/progress_mes"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerInParent="true"
