--- a/app/src/main/res/layout/activity_get_boniatos.xml
+++ b/app/src/main/res/layout/activity_get_boniatos.xml
@@ -4,60 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/green_gradient"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include layout="@layout/toolbar" />
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/TextBase.Purple"
+            android:gravity="center_horizontal"
+            android:padding="5dp"
+            android:text="@string/how_many_etics"
+            android:layout_marginTop="10dp"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="bottom"
+            android:orientation="horizontal">
 
-            <TextView
-                style="@style/TextBase.Purple"
-                android:gravity="center_horizontal"
-                android:padding="5dp"
-                android:text="@string/get_boniatos_under_construction_message"
-                android:textSize="13sp" />
-
-            <LinearLayout
+            <EditText
+                android:id="@+id/edit_get_boniatos_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="bottom"
-                android:orientation="horizontal">
+                android:ems="4"
+                android:gravity="right"
+                android:layout_gravity="bottom"
+                android:inputType="number|phone"
+                android:padding="10dp"/>
 
-                <EditText
-                    android:id="@+id/edit_get_boniatos_amount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/bg_edittext"
-                    android:ems="4"
-                    android:gravity="right"
-                    android:inputType="number|phone"
-                    android:padding="5dp" />
-
-                <TextView
-                    style="@style/TextBase"
-                    android:layout_marginLeft="10dp"
-                    android:text="@string/currency_name_plural" />
-            </LinearLayout>
+            <TextView
+                style="@style/TextBase"
+                android:layout_marginLeft="10dp"
+                android:text="@string/currency_name_plural" />
 
             <android.support.v7.widget.AppCompatButton
-                android:id="@+id/btn_recharge"
+                android:id="@+id/btn_continue_purchase"
                 style="@style/ButtonMes"
-                android:layout_marginTop="20dp"
-                android:text="@string/purchase_verb" />
-
-
+                android:text="@string/continue_str"
+                android:minWidth="0dp"
+                android:layout_marginLeft="20dp"/>
         </LinearLayout>
-    </ScrollView>
+
+        <TextView
+            android:id="@+id/tv_payment_text"
+            style="@style/TextBase.Purple"
+            android:text="@string/purchase_payment_text"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="10dp"/>
+
+        <net.mercadosocial.moneda.views.WebViewCustom
+            android:id="@+id/webview_purchase"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="@color/transparent"/>
+
+    </LinearLayout>
 </LinearLayout>
