--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -9,7 +9,8 @@
     <item
         android:id="@+id/menuItem_change_social_market"
         android:icon="@drawable/ic_swap"
-        android:title="@string/change_social_market" />
+        android:title="@string/change_social_market"
+        android:visible="false"/>
 
     <item
         android:id="@+id/menuItem_invitations"
