--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,8 @@
     <color name="orange">#e78f00</color>
     <color name="grey">#807f7f</color>
 
+    <color name="grey_empty_state">#A8A8A8</color>
+
     <color name="tab_selected">#F8FCE1</color>
     <color name="tab_unselected">#E7F498</color>
 
